MIUI西班牙 translations added.

--- a/src/packages/apps/KeyChain/res/values/strings.xml
+++ b/src/packages/apps/KeyChain/res/values/strings.xml
@@ -17,27 +17,27 @@
     <string name="app_name">Key Chain</string>
 
     <!-- Dialog title when no certificates were found -->
-    <string name="title_no_certs">No certificates found</string>
+    <string name="title_no_certs">No se encontraron certificados</string>
 
     <!-- Dialog title when at least one certificate was found -->
-    <string name="title_select_cert">Select certificate</string>
+    <string name="title_select_cert">Elegir certificado</string>
 
     <!-- Used at top of dialog to identify requesting application -->
-    <string name="requesting_application">The application %s has requested a certificate. Selecting a certificate will grant the application the ability to use this identity with servers now and in the future.</string>
+    <string name="requesting_application">La aplicación %s ha solicitado un certificado. Elegir un certificado garantizará a la aplicación la habilidad de usar esta identidad con los servidores ahora y en el futuro.</string>
 
     <!-- Used at top of dialog to identify requesting server (may be host:port or just host)-->
-    <string name="requesting_server">The application has identified the requesting server as %s but you should only grant the application access to the certificate if you trust the application.</string>
+    <string name="requesting_server">La aplicacion ha identificado la solicitud del servidor como %s pero sólo deberías garantizar el acceso de la aplicación al certificado si tu confias en ella.</string>
 
     <!-- Label of button to send the user to the CertInstaller to install a certificate (arguments are constants for .pfx and .p12) -->
-    <string name="install_new_cert_message">You can install certificates from a PKCS#12 file with a %1$s or a %2$s extension located in external storage.</string>
+    <string name="install_new_cert_message">Puedes instalar certificados desde un archivo PKCS#12 con extensión %1$s o %2$s, desde el almacenamiento interno.</string>
 
     <!-- Label of button to send the user to the CertInstaller to install a certificate -->
-    <string name="install_new_cert_button_label">Install</string>
+    <string name="install_new_cert_button_label">Instalar</string>
 
     <!-- Label of button to send the allow the application certificate request -->
-    <string name="allow_button">Allow</string>
+    <string name="allow_button">Permitir</string>
 
     <!-- Label of button to send the deny the application certificate request -->
-    <string name="deny_button">Deny</string>
+    <string name="deny_button">Denegar</string>
 
 </resources>
