MIUI西班牙 translations added.

--- a/src/packages/apps/MiuiBrowser/res/values/strings.xml
+++ b/src/packages/apps/MiuiBrowser/res/values/strings.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Name of tab containing yellow page sites -->
-    <string name="tab_yellowpage">Yellow page</string>
+    <string name="tab_yellowpage">Páginas amarillas</string>
 
     <!-- Name of tab containing quick link sites -->
-    <string name="tab_quicklinks">Quick links</string>
+    <string name="tab_quicklinks">Accesos rápidos</string>
 
     <!-- Settings label -->
-    <string name="pref_content_night_read_mode">Enable Night Mode</string>
+    <string name="pref_content_night_read_mode">Activar modo nocturno</string>
 
     <string-array name="pref_homepage_choices">
         <!-- Setting choice to set the homepage to the current page [CHAR LIMIT=40] -->
-        <item>Current page</item>
+        <item>Pág.Actual</item>
         <item>MIUI home</item>item>
         <!-- Setting choice to set the homepage to a blank page [CHAR LIMIT=40] -->
-        <item>Blank page</item>
+        <item>Pág.vacía</item>
         <!-- Setting choice to set the homepage to the default page [CHAR LIMIT=40] -->
-        <item>Default page</item>
+        <item>Pág.principal</item>
         <!-- Setting choice to set the homepage to the "Most Visited" homepage feature, which is a list of most visited sites [CHAR LIMIT=40] -->
-        <item>Most visited sites</item>
+        <item>Webs más visitadas</item>
         <!-- Setting choice to set the homepage to a user entered URL [CHAR LIMIT=40] -->
-        <item>Other</item>
+        <item>Otros</item>
     </string-array>
     <string-array name="pref_homepage_values" translatable="false">
         <item>current</item>
@@ -32,12 +32,12 @@
     </string-array>
 
     <!-- Checkbox setting for enabling/disabling the ExitOnClosingLastTab feature [CHAR-LIMIT=32] -->
-    <string name="pref_exit_on_closing_last_tab_enabled_title">Exit on closing last tab</string>
+    <string name="pref_exit_on_closing_last_tab_enabled_title">Salir al cerrar últ.pestaña</string>
     <!-- Settings summary for the ExitOnClosingLastTab feature. [CHAR-LIMIT=none] -->
-    <string name="pref_exit_on_closing_last_tab_enabled_summary">Check this to exit browser on closing last tab in navigation screen. Uncheck to show homepage</string>
+    <string name="pref_exit_on_closing_last_tab_enabled_summary">Marque esta opción para salir del navegador al cierre de la última pestaña en la pantalla de navegación. Desactive la opción para mostrar la página principal.</string>
 
-    <string name="url_hint">Search or type URL</string>
-    <string name="search_hint">Search</string>
+    <string name="url_hint">Buscar o escribe una URL</string>
+    <string name="search_hint">Buscar</string>
 
     <string-array name="bookmarks_zh" translatable="false">
         <item>小米论坛</item>
@@ -56,30 +56,30 @@
         <item>http://3g.163.com/</item>
     </string-array>
 
-    <string name="file_picker_new_folder">New folder</string>
-    <string name="file_picker_sdcard_not_found">SD card not detected, please check if the device is currently mounted or in use</string>
-    <string name="export_bookmark_sucess">Successfully exported bookmarks to SD card!</string>
-    <string name="export_bookmark_failure">Failed to export bookmarks to SD card!</string>
-    <string name="import_bookmark_sucess">Bookmarks imported successfully</string>
-    <string name="import_bookmark_failure">Bookmarks FAILED To Import!</string>
-    <string name="importing_favorite_files">Importing Data ...</string>
-    <string name="please_select_a_file_to_import">Please select the data file</string>
-    <string name="exported_bookmark_file_name">My favorites</string>
-    <string name="import_bookmark">Import bookmarks</string>
-    <string name="export_bookmark">Export bookmarks</string>
+    <string name="file_picker_new_folder">Nueva Carpeta</string>
+    <string name="file_picker_sdcard_not_found">La SD no se detecta, por favor verifique si el dispositivo está montado o en uso</string>
+    <string name="export_bookmark_sucess">Exportados correctamente los marcadores a la SD!</string>
+    <string name="export_bookmark_failure">Fallo al exportar los marcadores a la SD!</string>
+    <string name="import_bookmark_sucess">Marcadores importados correctamente</string>
+    <string name="import_bookmark_failure">Fallo al importar marcadores!</string>
+    <string name="importing_favorite_files">Importando datos...</string>
+    <string name="please_select_a_file_to_import">Por favor seleccione el archivo</string>
+    <string name="exported_bookmark_file_name">Mis favoritos</string>
+    <string name="import_bookmark">Importar marcadores</string>
+    <string name="export_bookmark">Exportar marcadores</string>
 
-    <string name="miui_yellowpage_category">Category</string>
-    <string name="miui_yellowpage_site">Site</string>
+    <string name="miui_yellowpage_category">Categoría</string>
+    <string name="miui_yellowpage_site">Pág.</string>
 
-    <string name="accessibility_button_goto">Go</string>
+    <string name="accessibility_button_goto">Ir</string>
 
-    <string name="contextmenu_download_image_as">Save image as</string>
+    <string name="contextmenu_download_image_as">Guardar imagen como</string>
 
-    <string name="pref_ua_title">User agent management</string>
-    <string name="pref_ua_string">User agent string</string>
+    <string name="pref_ua_title">Gestión de usuarios</string>
+    <string name="pref_ua_string">Cadena Gestión usuarios</string>
     <string-array name="pref_ua_choices">
         <item>Android</item>
-        <item>Desktop</item>
+        <item>Escritorio</item>
         <item>iPhone</item>
         <item>iPad</item>
         <item>Froyo-N1</item>
@@ -97,25 +97,25 @@
     <string name="pref_ua_mione_value" translatable="false">6</string>
 
     <!-- Do not translate.  Testing only -->
-    <string name="dump_dom_tree" translatable="false">Dump DOM tree to file</string>
-    <string name="dump_render_tree" translatable="false">Dump render tree to file</string>
-    <string name="dump_display_tree" translatable="false">Dump display tree to file</string>
+    <string name="dump_dom_tree" translatable="false">Vuelca árbol DOM al archivo</string>
+    <string name="dump_render_tree" translatable="false">Volcar render del árbol DOM al archivo</string>
+    <string name="dump_display_tree" translatable="false">Volcar display del árbol al archivo</string>
 
-    <string name="pref_reading_mode_enabled_title">Reading mode</string>
-    <string name="pref_reading_mode_enabled_title_summary">JavaScript needs to be enabled</string>
+    <string name="pref_reading_mode_enabled_title">Modo Lectura</string>
+    <string name="pref_reading_mode_enabled_title_summary">JavaScript necesita activarse</string>
 
 
     <!-- Menu item to exit browser. [CHAR-LIMIT=30]-->
-    <string name="menu_exit">Exit</string>
+    <string name="menu_exit">Salir</string>
     <!-- Confirmation dialog message confirming to exit browser -->
-    <string name="exit_browser_warning">Exit browser?</string>
+    <string name="exit_browser_warning">¿Salir del Navegador?</string>
 
     <!-- Toast informing tab has been opened in background. [CHAR LIMIT=50] -->
-    <string name="tab_opened_background">Tab opened in background.</string>
+    <string name="tab_opened_background">Pestaña abierta en segundo plano</string>
     <!-- Toast informing a tab has been closed. [CHAR LIMIT=50] -->
-    <string name="tab_closed">Tab closed.</string>
+    <string name="tab_closed">Pestaña cerrada.</string>
 
-    <string name="search_cancel">Cancel</string>
+    <string name="search_cancel">Cancelar</string>
 
     <string name="search_baidu">Baidu</string>
     <string name="search_google">Google</string>
