--- a/src/packages/apps/MiuiBrowser/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiBrowser/res/values-zh-rCN/strings.xml
@@ -58,8 +58,8 @@
 
     <string name="menu_exit">"退出"</string>
     <string name="exit_browser_warning">退出浏览器？</string>
-    <string name="menu_enable_night_mode">开启夜景模式</string>
-    <string name="menu_disable_night_mode">关闭夜景模式</string>
+    <string name="menu_enable_night_mode">开启夜间模式</string>
+    <string name="menu_disable_night_mode">关闭夜间模式</string>
 
     <string name="tab_opened_background">已在后台新的标签页打开此链接</string>
     <string name="tab_closed">已关闭标签页</string>
