MIUI西班牙 translations added.

--- a/src/packages/apps/MiuiHome/res/values/strings.xml
+++ b/src/packages/apps/MiuiHome/res/values/strings.xml
@@ -31,13 +31,13 @@
     <string name="application_name">MiuiHome</string>
     <!-- Name for all applications running as this uid. -->
     <!-- Default folder name -->
-    <string name="folder_name">Folder</string>
+    <string name="folder_name">Carpeta</string>
     <!-- Title of dialog that appears after user selects Wallpaper from menu -->
-    <string name="chooser_wallpaper">Select wallpaper from</string>
+    <string name="chooser_wallpaper">Seleccionar fondo de</string>
     <!-- Button label on Wallpaper Gallery screen; user selects this button to set a specific wallpaper -->
     <!-- Option in "Select wallpaper from" dialog box -->
     <!-- Displayed when user selects a shortcut for an app that was uninstalled -->
-    <string name="activity_not_found">Application is not installed on your phone.</string>
+    <string name="activity_not_found">La App no está instalada en tu teléf.</string>
     <!-- List item for configuring the current wallpaper -->
 
     <!-- Folders -->
@@ -46,34 +46,34 @@
     <!-- Title of dialog box -->
     <!-- Buttons in Rename folder dialog box -->
     <!-- Buttons in Rename folder dialog box -->
-    <string name="cancel_action">Cancel</string>
+    <string name="cancel_action">Cancelar</string>
 
     <!-- Shortcuts -->
     <skip />
     <!-- Title of dialog box -->
-    <string name="menu_item_add_item">Add to Home screen</string>
+    <string name="menu_item_add_item">Añadir al Escritorio</string>
     <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all apps -->
     <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all shortcuts -->
-    <string name="group_shortcuts">Shortcuts</string>
+    <string name="group_shortcuts">Accesos</string>
     <!-- Options in "Add to Home" dialog box; Title of the folder gadget -->
-    <string name="group_folder">New folder</string>
+    <string name="group_folder">Nueva Carpeta</string>
     <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all live folders -->
-    <string name="group_live_folders">Folders</string>
+    <string name="group_live_folders">Carpeta</string>
     <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all widgets/gadgets -->
     <!-- Options in "Add to Home" dialog box; Title of the group containing the list of apps that can set the wallpaper-->
     <!-- Options in "Add to Home" dialog box; Name of the Folder widget-->
     <!-- Options in "Add to Home" dialog box; Name of the Clock widget-->
     <!-- Options in "Add to Home" dialog box; Name of the Picture frame widget-->
     <!-- Error message when user has filled a home screen, possibly not used -->
-    <string name="out_of_space">No more room on this Home screen.</string>
+    <string name="out_of_space">No queda espacio en esta pantalla de inicio.</string>
     <!-- Message displayed when a shortcut is created by an external application -->
     <!-- Message displayed when a shortcut is uninstalled by an external application -->
     <!-- Message displayed when an external application attemps to create a shortcut that already exists -->
 
     <!-- Title of dialog when user is selecting shortcut to add to homescreen -->
-    <string name="title_select_shortcut">Select shortcut</string>
+    <string name="title_select_shortcut">Selecciona Acceso</string>
     <!-- Title of dialog when user is selecting live folder to add to homescreen -->
-    <string name="title_select_live_folder">Select folder</string>
+    <string name="title_select_live_folder">Selecciona carpeta</string>
 
     <!-- All applications label for accessibilty (spoken when the button gets focus). -->
     <!-- Label for button in all applications label to go back home (to the workspace / desktop)
@@ -82,117 +82,117 @@
     <!-- Menus items: -->
     <skip />
     <!-- Verb, menu item used to add an item on the desktop -->
-    <string name="menu_add">Add</string>
+    <string name="menu_add">Añadir</string>
     <!-- Noun, menu item used to set the desktop's wallpaper -->
-    <string name="menu_wallpaper">Wallpaper</string>
+    <string name="menu_wallpaper">Fondo Pantalla</string>
     <!-- Verb, menu item used to initiate global search -->
-    <string name="menu_search">Search</string>
+    <string name="menu_search">Buscar</string>
     <!-- Noun, menu item used to bring down the notifications shade -->
-    <string name="menu_workspace_preview">Preview</string>
-    <string name="menu_back_desktop">Back to home</string>
+    <string name="menu_workspace_preview">Previsualización</string>
+    <string name="menu_back_desktop">Volver al Inicio</string>
     <!-- Noun, menu item used to show the gestures settings -->
     <!-- Noun, menu item used to show the system settings -->
-    <string name="menu_settings">Settings</string>
+    <string name="menu_settings">Ajustes</string>
 
     <!-- Permissions: -->
     <skip />
     <!-- Permission short label -->
-    <string name="permlab_install_shortcut">install shortcuts</string>
+    <string name="permlab_install_shortcut">instalar accesos</string>
     <!-- Permission description -->
-    <string name="permdesc_install_shortcut">Allows an application to add
-        shortcuts without user intervention.</string>
+    <string name="permdesc_install_shortcut">Permitir a la App añadir
+        accesos sin la intervención del usuario.</string>
     <!-- Permission short label -->
-    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
+    <string name="permlab_uninstall_shortcut">desinstalar accesos</string>
     <!-- Permission description -->
-    <string name="permdesc_uninstall_shortcut">Allows an application to remove
-        shortcuts without user intervention.</string>
+    <string name="permdesc_uninstall_shortcut">Permite a la App quitar
+        accesos sin la intervención del usuario.</string>
     <!-- Permission short label -->
-    <string name="permlab_read_settings">read Home settings and shortcuts</string>
+    <string name="permlab_read_settings">leer los Ajustes y Accesos de Inicio</string>
     <!-- Permission description -->
-    <string name="permdesc_read_settings">Allows an application to read the settings and
-        shortcuts in Home.</string>
+    <string name="permdesc_read_settings">Permitir a la App leer los Ajustes y los
+        accesos en Inicio.</string>
     <!-- Permission short label -->
-    <string name="permlab_write_settings">write Home settings and shortcuts</string>
+    <string name="permlab_write_settings">escribir ajustes y accesos en Inicio</string>
     <!-- Permission description -->
-    <string name="permdesc_write_settings">Allows an application to change the settings and
-        shortcuts in Home.</string>
+    <string name="permdesc_write_settings">Permitir a la App cambiar los ajustes y
+        accesos en Inicio.</string>
 
     <!-- Widgets: -->
     <skip />
 
     <!-- ADD BY LIBRA -->
-    <string name="start_activity_failed">Failed to start, please try again</string>
-    <string name="gadget_error_text">Problem loading widget</string>
-    <string name="menu_edit">Edit widgets</string>
-    <string name="menu_sort">Sort home screen icons</string>
-    <string name="menu_launcher_setting">Launcher settings</string>
-    <string name="editing_tips">Add or edit widget</string>
-    <string name="cant_remove_system_app">Unable to remove system application</string>
-    <string name="cant_remove_retained_app">Unable to uninstall application customized by the operator</string>
-    <string name="uninstall_body_format">Remove application \"%s\"?</string>
-    <string name="uninstall">Uninstall</string>
-    <string name="starting_preset_app">Starting</string>
-    <string name="install">Install</string>
-    <string name="cant_remove_folder">Unable to remove non-empty folder</string>
-    <string name="failed_to_drop">Moving failed</string>
-    <string name="failed_to_drop_widget_nospace">Failed to move, not enough space!</string>
-    <string name="failed_to_drop_widget_invalid">Widget invalid</string>
-    <string name="failed_to_delete_temporary">Failed to delete, please try again.</string>
-    <string name="widget_favorite_contacts_label">Favorite contacts</string>
+    <string name="start_activity_failed">Fallo al iniciar, vuelva a intentarlo</string>
+    <string name="gadget_error_text">Problema cargando el widget</string>
+    <string name="menu_edit">Editar widgets</string>
+    <string name="menu_sort">Ordenar iconos de la pantalla de inicio</string>
+    <string name="menu_launcher_setting">Ajustes del Launcher</string>
+    <string name="editing_tips">Añadir o Editar widget</string>
+    <string name="cant_remove_system_app">No se pueden borrar Apps del Sistema</string>
+    <string name="cant_remove_retained_app">No se pueden desinstalar Apps personalizadas por el operador</string>
+    <string name="uninstall_body_format">Borrar aplicación \"%s\"?</string>
+    <string name="uninstall">Deinstalar</string>
+    <string name="starting_preset_app">Empezar</string>
+    <string name="install">Instalar</string>
+    <string name="cant_remove_folder">No es posible borrar una carpeta no-vacia</string>
+    <string name="failed_to_drop">Fallo al mover</string>
+    <string name="failed_to_drop_widget_nospace">Fallo al mover, no queda espacio!</string>
+    <string name="failed_to_drop_widget_invalid">Widget inválido</string>
+    <string name="failed_to_delete_temporary">Fallo al borrar, vuelva a intentarlo.</string>
+    <string name="widget_favorite_contacts_label">Contactos Favoritos</string>
     <string name="widget_favorite_contacts_edit">Editor</string>
-    <string name="widget_favorite_contacts_style">Switch size</string>
-    <string name="edit_folder_title">"Modify folder title"</string>
+    <string name="widget_favorite_contacts_style">Cambiar tamaño</string>
+    <string name="edit_folder_title">"Modificar título de carpeta"</string>
     <string name="confirm_btn_label">"OK"</string>
-    <string name="cancel_btn_label">"Cancel"</string>
-    <string name="sort_by_not_defined">Sort by default</string>
-    <string name="sort_by_frequency">Sort by usage</string>
-    <string name="sort_by_abc">Sort by name</string>
-    <string name="encryption">Encryption</string>
-    <string name="default_folder_title_tools">Tools</string>
-    <string name="default_folder_title_recommend">Recommend</string>
+    <string name="cancel_btn_label">"Cancelar"</string>
+    <string name="sort_by_not_defined">Orden por defecto</string>
+    <string name="sort_by_frequency">Orden por uso</string>
+    <string name="sort_by_abc">Orden por nombre</string>
+    <string name="encryption">Encriptación</string>
+    <string name="default_folder_title_tools">Herramientas</string>
+    <string name="default_folder_title_recommend">Recomendado</string>
 
-    <string name="preferences_title">Launcher Settings</string>
-    <string name="preferences_general_title">General settings</string>
-    <string name="pref_keep_in_memory_title">Keep in memory</string>
-    <string name="pref_keep_in_memory_summary">Keeps launcher from exiting in low memory.</string>
-    <string name="pref_render_in_truecolor_title">High quality graphics</string>
-    <string name="pref_render_in_truecolor_summary">Turning off this option will improve drawing performance.</string>
-    <string name="pref_enable_drawing_cache_title">Drawing Cache</string>
-    <string name="pref_enable_drawing_cache_summary">Turn off to free up memory, will cause some lag</string>
-    <string name="pref_icon_shadow_title">Icon shadow</string>
-    <string name="pref_icon_shadow_summary">Turn on/off the shadow on home screen icons.</string>
-    <string name="pref_screen_transformation_type_title">Transition effects</string>
-    <string name="transformation_type_classic">Classic</string>
-    <string name="transformation_type_classic_no_overshoot">Classic (No overshoot)</string>
-    <string name="transformation_type_crossfade">Crossfade</string>
-    <string name="transformation_type_falldown">Falldown</string>
-    <string name="transformation_type_cube">3D Cube</string>
-    <string name="transformation_type_leftpage">Page</string>
-    <string name="transformation_type_stack">Cascading</string>
-    <string name="transformation_type_rotate">Rotation</string>
-    <string name="pref_wallpaper_scroll_type_title">Wallpaper scroll types</string>
+    <string name="preferences_title">Ajustes del Launcher</string>
+    <string name="preferences_general_title">Ajustes Generales</string>
+    <string name="pref_keep_in_memory_title">Mantener en memoriay</string>
+    <string name="pref_keep_in_memory_summary">Mantener el launcher aún con la memoria baja.</string>
+    <string name="pref_render_in_truecolor_title">Gráficos de Alta Calidad</string>
+    <string name="pref_render_in_truecolor_summary">Apagar esta opción podría darle problemas en su experiencia de usuario.</string>
+    <string name="pref_enable_drawing_cache_title">Caché</string>
+    <string name="pref_enable_drawing_cache_summary">Desconectar para ahorrar memoria, podría causar lag</string>
+    <string name="pref_icon_shadow_title">Sombra de iconos</string>
+    <string name="pref_icon_shadow_summary">Conectar/Desconectar iconos en pantalla principal.</string>
+    <string name="pref_screen_transformation_type_title">Efectos de Transición</string>
+    <string name="transformation_type_classic">Clásico</string>
+    <string name="transformation_type_classic_no_overshoot">Clásico (Sin rebote)</string>
+    <string name="transformation_type_crossfade">Desvanecer</string>
+    <string name="transformation_type_falldown">Rueda</string>
+    <string name="transformation_type_cube">Cubo 3D</string>
+    <string name="transformation_type_leftpage">Páginas</string>
+    <string name="transformation_type_stack">Cascada</string>
+    <string name="transformation_type_rotate">Rotación</string>
+    <string name="pref_wallpaper_scroll_type_title">Tipos de Transiciones</string>
 
-    <string name="widget_gadget_player">Music</string>
+    <string name="widget_gadget_player">Música</string>
     <string name="buffering">Buffering...</string>
-    <string name="emptyplaylist">Playlist is empty</string>
-    <string name="unknown_artist_name">Unknown Artist</string>
+    <string name="emptyplaylist">Playlist vacío</string>
+    <string name="unknown_artist_name">Artista desconocido</string>
 
-    <string name="global_search_hint">Enter Keyword(s) to Search</string>
-    <string name="widget_global_search">Global Search</string>
+    <string name="global_search_hint">Escribe tu(s) palabra(s) para Buscar</string>
+    <string name="widget_global_search">Búsqueda Global/string>
 
-    <string name="gadget_clock_12_label">Clock 1x2</string>
-    <string name="gadget_clock_22_label">Clock 2x2</string>
-    <string name="gadget_clock_24_label">Clock 2x4</string>
+    <string name="gadget_clock_12_label">Reloj 1x2</string>
+    <string name="gadget_clock_22_label">Reloj 2x2</string>
+    <string name="gadget_clock_24_label">Reloj 2x4</string>
 
-    <string name="gadget_photo_44_label">Photoframe 4x4</string>
-    <string name="gadget_photo_22_label">Photoframe 2x2</string>
-    <string name="gadget_photo_24_label">Photoframe 2x4</string>
+    <string name="gadget_photo_44_label">Marco 4x4</string>
+    <string name="gadget_photo_22_label">Marco 2x2</string>
+    <string name="gadget_photo_24_label">Marco 2x4</string>
 
-    <string name="gadget_load_error">Widget loading...</string>
+    <string name="gadget_load_error">Cargando Widget...</string>
 
-    <string name="invalid_contact_shortcut">Invalid contact shortcut</string>
+    <string name="invalid_contact_shortcut">Acceso de contacto erróneo</string>
 
-    <string name="guide_tips_editing_mode">Hold the widget below to drag it onto the screen</string>
+    <string name="guide_tips_editing_mode">Pulsa sobre el widget para arrastrar al escritorio</string>
 
     <!-- Do not translate. Duration format for duration < 1 hour -->
     <string translatable="false" name="durationformatshort"><xliff:g id="format">%2$2d:%5$02d</xliff:g></string>
@@ -202,10 +202,10 @@
     <string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
 
     <!-- Adjust photo -->
-    <string name="photo_adjust">Edit photo</string>
-    <string name="select_photo">Photo</string>
-    <string name="select_frame">Frame</string>
-    <string name="photo_confirm">Confirm</string>
-    <string name="photo_load_failed">Failed to load photo!</string>
+    <string name="photo_adjust">Editar foto</string>
+    <string name="select_photo">Foto</string>
+    <string name="select_frame">Marco</string>
+    <string name="photo_confirm">Confirmar</string>
+    <string name="photo_load_failed">Fallo al cargar foto!</string>
     <!-- END of ADD BY LIBRA -->
 </resources>
