--- a/src/packages/apps/AntiSpam/res/values-it/strings.xml
+++ b/src/packages/apps/AntiSpam/res/values-it/strings.xml
@@ -11,7 +11,7 @@
     <string name="fw_pattern_settings">Azioni</string>
     <string name="fw_action_settings">Impostazioni</string>
     <string name="fw_time_settings">Periodo di blocco</string>
-    <string name="fw_start_time">Ora di inizio blocco</string>
+    <string name="fw_start_time">Ora inizio blocco</string>
     <string name="fw_end_time">Ora fine blocco</string>
     <string name="fw_all_day">Quotidiano</string>
     <string name="fw_period">Specifica periodo blocco</string>
