--- a/src/packages/apps/MiuiPhone/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiPhone/res/values-zh-rCN/strings.xml
@@ -163,7 +163,7 @@
     <string name="handon_ringer_title_miui">拿起时铃声减弱</string>
     <string name="hangup_sms_miui">挂断并发短信</string>
     <string name="ignore_miui">忽略</string>
-    <string name="importing_sim_contacts_miui">"正在导入SIM卡联系人"</string>
+    <string name="importing_sim_contacts_miui">"正在导入SIM卡联系人..."</string>
     <string name="import_selected_sim_entries_miui">导入已选联系人</string>
     <string name="import_all_sim_entries_miui">导入全部联系人</string>
     <string name="import_sim_entries_finish">导入SIM卡联系人完毕</string>
