--- a/src/packages/apps/MiuiPhone/res/values/strings.xml
+++ b/src/packages/apps/MiuiPhone/res/values/strings.xml
@@ -163,7 +163,7 @@
     <string name="handon_ringer_title_miui">Quiet ring on pickup</string>
     <string name="hangup_sms_miui">Reject with SMS</string>
     <string name="ignore_miui">Ignore</string>
-    <string name="importing_sim_contacts_miui">Importing SIM contacts</string>
+    <string name="importing_sim_contacts_miui">Importing SIM contacts...</string>
     <string name="import_selected_sim_entries_miui">Import selected contacts</string>
     <string name="import_all_sim_entries_miui">Import all contacts</string>
     <string name="import_sim_entries_finish">Import SIM contacts success</string>
