MIUI西班牙 translations added.

--- a/src/packages/apps/MiuiPhone/res/values/strings.xml
+++ b/src/packages/apps/MiuiPhone/res/values/strings.xml
@@ -319,7 +319,7 @@
     <!-- Copied from framework -->
     <string name="description_direction_right">Derecha para <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
     <string name="description_direction_left">"Izquierda para <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
-    <string name="description_direction_up"Arriba para <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
+    <string name="description_direction_up">Arriba para <xliff:g id="target_description" example="Unlock">%s</xliff:g>.</string>
 
     <!-- Rewrite Wi-Fi to WLAN -->
     <string name="ota_skip_activation_dialog_message">Si omites la activación, no podrás realizar llamadas ni conectarte a las redes de datos móviles (aunque sí podrás conectarte a las redes Wi-Fi). Se te pedirá que actives el teléfono cada vez que lo enciendas hasta que realices la activación.</string>
