MIUI西班牙 translations added.

--- a/src/packages/apps/MiuiVideoPlayer/res/values/strings.xml
+++ b/src/packages/apps/MiuiVideoPlayer/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="videoplayer_label">VideoPlayer</string>
-    <string name="unknown_artist">Unknown Artist</string>
-    <string name="unsupported_format">Sorry, the video format is not supported</string>
+    <string name="unknown_artist">Artista Desconocido</string>
+    <string name="unsupported_format">Lo sentimos, el formato del video no es válido</string>
 
     <plurals name="Nvideos">
         <!-- number of video is one -->
