--- a/src/packages/apps/Backup/res/values/strings.xml
+++ b/src/packages/apps/Backup/res/values/strings.xml
@@ -159,7 +159,7 @@
     <string name="progress_backup_hint">Proceso completado</string>
     <string name="cancel_backup">Cancelar</string>
     <string name="restore_contact">Recuperación de contactos</string>
-    <string name="restore_contact_content">La operación de recuperación de los contactos puede dar lugar a la duplicación de algunos ya existentes en su cuenta Gmail. ¿Está seguro de restaurar sus contactos? Nota: Recuerde que puede combinar sus contactos duplicados</string>
+    <string name="restore_contact_content">La operación de recuperación de contactos puede dar lugar a duplicación de algunos existentes en su cuenta Gmail. ¿Está seguro de restaurar sus contactos? Nota: Recuerde que puede combinar sus contactos duplicados</string>
     <string name="progress_restore_hint">Proceso completado</string>
     <string name="cancel_restore">Cancelar</string>
     <string name="local_select_sysdata">Sistema<xliff:g id="COUNT">%s</xliff:g></string>
@@ -193,10 +193,10 @@
     <string name="cloud_restore_guide">Clique en "Iniciar" para restaurar datos\n También puede restaurarlos <xliff:g id="APP">%s</xliff:g> en Backup</string>
     <string name="import_from_xiaomi_account_hint1">1.\tIniciar el teléfono con los contactos\n\n2.\tInstale MiTalk y acceda.\n\thttp://www.miliao.com\n\n3.\tAcceda a los ajustes de MiTalk y escoja ”Backup de los contactos en la cuenta Xiaomi”</string>
     <string name="import_from_xiaomi_account_hint2"> Note: Go to next step if backup has already existed</string>
-    <string name="import_from_xiaomi_account_hint_title">Use MiTalk para realizar backup de los contactos para otros servicios, no en MI-ONE</string>
+    <string name="import_from_xiaomi_account_hint_title">Use MiTalk para realizar backups de los contactos para otros servicios. (Excepto MI-ONE)</string>
 
     <string name="guarded_mode_dialog_title">Modo Protegido</string>
-    <string name="guarded_mode_dialog_message">No se puede realizar restaurar/backup en modo Protegido</string>
+    <string name="guarded_mode_dialog_message">No se puede realizar/restaurar un backup en modo Protegido</string>
     <string name="multi_select_title">Seleccionado(s) <xliff:g id="number" example="15">%1$s</xliff:g> item(s)</string>
 </resources>
 
